Bug squashing is finished in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1937,7 +1937,7 @@ h2.tooTall{
 }
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 300;
-	line-height: 1.5;
+	line-height: 30pt;
 	margin: 0 0 1rem 0;
 }
 
